tests/algorithms/x/PHP/sorts/insertion_sort.out
Fatal error: Uncaught Error: insertion_sort(): Argument #1 ($xs) could not be passed by reference in /workspace/mochi/tests/algorithms/x/PHP/sorts/insertion_sort.php:68
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/sorts/insertion_sort.php on line 68